--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
     <div class="advantages">
         <div class="container">
-            <h2 class="headers">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 
             <div class="advantages__icons">
                 <div class="advantages__icon">
@@ -86,6 +86,25 @@
                 </div>
             </div>
 
+        </div>
+    </div>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_consult">
+                Получите бесплатную консультацию<br> 
+                того по подбору пульсометра 
+            </h2>
+            <div class="consultation__desc">
+                Просто заполните форму заявки<br>
+                и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+                <button class="button button_subbmit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </div>
 </body>
