the adaptability form block

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
         <div class="container">
             <h2 class="title title_consult">
                 Получите бесплатную консультацию<br> 
-                того по подбору пульсометра 
+                по подбору пульсометра 
             </h2>
             <div class="consultation__desc">
                 Просто заполните форму заявки<br>
